--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 
   <title>SpaceWalkers</title>
 
@@ -17,11 +18,28 @@
 <body>
 
  <!-- navigation code here -->
+<section class="navBar">
+
+  <h1>SpaceWalkers</h1>
+
+  <nav>
+
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+    <a href="#">Sign In</a>
+
+  </nav>
+
+</section>
 
   <div class="container home">
 
     <header class="intro">
        <!-- image code here -->
+
+      <img class="spaceTop" src="img/main-header.png">
 
       <h2>Lift Off</h2>
     
