--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
 
+<figure class="full-width">
  <!-- navigation code here -->
 <section class="navBar">
 
@@ -31,6 +32,8 @@
     <a href="#">Sign In</a>
 
   </nav>
+
+</figure>
 
 </section>
 
